# agents

vl-uncertainty-benchmark/: .gitignore  README.md  pyproject.toml  requirements.txt
vl-uncertainty-benchmark/config/: models.yaml
vl-uncertainty-benchmark/notebooks/: analysis.ipynb
vl-uncertainty-benchmark/scripts/: compare_edge_cloud.py  generate_report.py  run_benchmark.py  run_deliberative_experiment.py
vl-uncertainty-benchmark/src/: __init__.py
vl-uncertainty-benchmark/src/analysis/: __init__.py  failure_modes.py  pareto.py
vl-uncertainty-benchmark/src/degradation/: __init__.py  pipeline.py  transforms.py
vl-uncertainty-benchmark/src/deliberative/: __init__.py  analysis.py  images.py  metrics.py  prompts.py  scenarios.py  tools.py
vl-uncertainty-benchmark/src/deliberative/models/: __init__.py  base.py  llm_wrapper.py  vlm_wrapper.py
vl-uncertainty-benchmark/src/metrics/: __init__.py  calibration.py
vl-uncertainty-benchmark/src/models/: __init__.py  base.py
vl-uncertainty-benchmark/src/models/detection/: __init__.py  sam.py  yolo.py
vl-uncertainty-benchmark/src/models/self_supervised/: __init__.py  dinov2.py  vjepa.py
vl-uncertainty-benchmark/src/models/vla/: __init__.py  octo.py  openvla.py  smolvla.py
vl-uncertainty-benchmark/src/models/vlm/: __init__.py  florence.py  internvl.py  llava.py  paligemma.py  qwen.py
vl-uncertainty-benchmark/src/uncertainty/: __init__.py  calibration.py  extractors.py
vl-uncertainty-benchmark/tests/: test_degradation.py
