[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vl-uncertainty-benchmark"
version = "0.1.0"
description = "Systematic benchmarking of vision model uncertainty calibration under degraded conditions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "VL-Uncertainty-Benchmark Team"}
]
keywords = [
    "vision-language-models",
    "uncertainty-quantification",
    "calibration",
    "robotics",
    "benchmark"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "timm>=0.9.0",
    "einops>=0.7.0",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
detection = [
    "segment-anything>=1.0",
    "ultralytics>=8.0.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
    "auto-gptq>=0.5.0",
    "optimum>=1.14.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]
all = [
    "vl-uncertainty-benchmark[detection,quantization,dev,notebooks]",
]

[project.scripts]
vl-benchmark = "scripts.run_benchmark:main"

[project.urls]
Homepage = "https://github.com/your-org/vl-uncertainty-benchmark"
Documentation = "https://github.com/your-org/vl-uncertainty-benchmark#readme"
Repository = "https://github.com/your-org/vl-uncertainty-benchmark"
Issues = "https://github.com/your-org/vl-uncertainty-benchmark/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
